# visibility-based-marching

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  interface.m  interface_MATLAB.m  interface_octave.m  profiling instructions.txt  vbs.bat  visibility_based_global_path_planner.bat
config/: settings.config
fast_marching/: compile_c_files.m  msfm2d.mexw64  msfm_.m  new_test.m  rnd_1.mat  rnd_2.mat  test.m
fast_marching/functions/: msfm2d.mexw64  msfm3d.m  msfm3d.mexw64
fast_marching/shortestpath/: rk4.mexw64
images/: visibilityField.txt
include/environment/: Field.h  environment.h  environment.hpp  field.hpp
include/flat_hash_map/: flat_hash_map.hpp
include/parser/: ConfigParser.h  ConfigParser.hpp  configparser.hpp  parser.hpp
include/solver/: solver.h  solver.hpp
output/: astar_fScore.txt  astar_gScore.txt  astar_path.txt  distanceFunction.txt  speedField.txt  visibilityBased.txt  visibilityBased_cameFrom.txt  visibilityBased_lightSources.txt  visibilityField.txt  vstar_fScore.txt  vstar_gScore.txt  vstar_lightSources.txt  vstar_path.txt
src/: ConfigParser.cpp  configParser.cpp  configparser.cpp  environment.cpp  main.cpp  parser.cpp  solver.cpp
